# npuzzle

./: AStar.hpp  BasicHeuristic.hpp  CMakeLists.txt  Heuristic.hpp  Logger.hpp  Parser.cpp  Parser.hh  State.hpp  file1.txt  file2.txt  init.txt  init3.txt  main.cpp
